--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="/static/logo.svg" />
     <link rel="stylesheet" href="/static/css/share.css" />
     <link rel="stylesheet" href="/static/css/settings.css" />
+    <link rel="stylesheet" href="/static/css/portfolio.css" />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -17,6 +18,7 @@
     <script src="https://unpkg.com/lightweight-charts@4.2.0/dist/lightweight-charts.standalone.production.js"></script>
     <script src="/static/js/utils.js"></script>
     <script src="/static/js/settings.js"></script>
+    <script src="/static/js/portfolio.js"></script>
     <script>
       tailwind.config = {
         darkMode: "class",
@@ -909,102 +911,7 @@
 
     <!-- COMPONENT: settings -->
 
-    <!-- Portfolio Modal -->
-    <div id="portfolio-overlay" class="modal-overlay">
-      <div class="settings-modal" style="max-width: 600px; width: 95vw">
-        <div class="flex items-center justify-between mb-8">
-          <div>
-            <h2 class="text-2xl font-black bg-clip-text text-transparent bg-premium-gradient tracking-tight">
-              Danh mục cổ phiếu
-            </h2>
-            <p
-              class="text-[11px] text-slate-700 dark:text-slate-300 font-bold uppercase tracking-[0.15em] mt-1.5 opacity-90"
-            >
-              Quản lý mã cổ phiếu đang nắm giữ
-            </p>
-          </div>
-          <button
-            onclick="closePortfolio()"
-            class="w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 flex items-center justify-center transition-colors"
-          >
-            <i data-lucide="x" class="w-5 h-5"></i>
-          </button>
-        </div>
-
-        <!-- Add Stock Form -->
-        <div class="bg-slate-50 dark:bg-slate-900/50 p-4 rounded-xl border border-slate-200 dark:border-slate-800 mb-6">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <div class="relative">
-              <label
-                class="block text-[11px] font-black text-emerald-600 dark:text-emerald-400 mb-3 uppercase tracking-[0.2em] px-1"
-                >Mã cổ phiếu</label
-              >
-              <div class="relative">
-                <input
-                  type="text"
-                  id="new-stock-symbol"
-                  placeholder="Nhập mã (VD: VNM)"
-                  autocomplete="off"
-                  class="w-full p-4 pr-12 rounded-2xl border border-slate-300 dark:border-white/10 bg-white dark:bg-slate-950 focus:border-emerald-500 dark:focus:border-emerald-400 focus:ring-4 focus:ring-emerald-500/10 outline-none transition-all text-sm font-bold uppercase"
-                />
-                <i data-lucide="search" class="absolute right-4 top-1/2 -translate-y-1/2 text-emerald-400 w-4 h-4"></i>
-              </div>
-              <div
-                id="portfolio-symbol-suggestions"
-                class="hidden absolute left-0 top-full mt-2 z-50 rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-900 shadow-lg max-h-48 overflow-y-auto w-full md:w-[450px]"
-              >
-                <!-- Suggestions will be rendered here -->
-              </div>
-            </div>
-            <div>
-              <label
-                class="block text-[11px] font-black text-primary-600 dark:text-primary-400 mb-3 uppercase tracking-[0.2em] px-1"
-                >Giá vốn (VND)</label
-              >
-              <input
-                type="number"
-                id="new-stock-price"
-                placeholder="VD: 70000"
-                class="w-full p-4 rounded-2xl border border-slate-300 dark:border-white/10 bg-white dark:bg-slate-950 focus:border-primary-500 dark:focus:border-primary-400 focus:ring-4 focus:ring-primary-500/10 outline-none transition-all text-sm font-bold"
-              />
-            </div>
-          </div>
-          <div class="flex gap-2 mt-4">
-            <button
-              onclick="addPortfolioStock()"
-              id="add-stock-btn"
-              class="flex-1 bg-primary-600 hover:bg-primary-700 text-white font-bold py-2.5 rounded-xl transition-all shadow-lg shadow-primary-500/25 flex items-center justify-center gap-2"
-            >
-              <i data-lucide="plus" id="add-stock-icon" class="w-4 h-4"></i>
-              <span id="add-stock-text">Thêm vào danh mục</span>
-            </button>
-            <button
-              onclick="cancelEditStock()"
-              id="cancel-edit-btn"
-              class="hidden px-4 bg-slate-200 dark:bg-slate-800 text-slate-600 dark:text-slate-400 font-bold py-2.5 rounded-xl transition-all"
-            >
-              Hủy
-            </button>
-          </div>
-        </div>
-
-        <!-- Stocks Table -->
-        <div class="max-h-[300px] overflow-y-auto overflow-x-auto custom-scrollbar">
-          <table class="portfolio-table">
-            <thead>
-              <tr>
-                <th class="font-bold whitespace-nowrap">Mã CK</th>
-                <th class="font-bold whitespace-nowrap">Giá vốn</th>
-                <th class="w-10 font-bold"></th>
-              </tr>
-            </thead>
-            <tbody id="portfolio-list">
-              <!-- Dynamic stocks -->
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+    <!-- COMPONENT: portfolio -->
 
     <!-- Main Content -->
     <main class="flex-1 flex flex-col lg:flex-row overflow-y-auto lg:overflow-hidden relative z-10" id="main-container">
@@ -4462,155 +4369,6 @@
         userMenu.classList.remove("show");
       }
 
-      function setupPortfolioSymbolAutocomplete() {
-        const portfolioSymbolSuggestions = document.getElementById("portfolio-symbol-suggestions");
-        if (typeof sharedSetupSymbolAutocomplete === "function") {
-          sharedSetupSymbolAutocomplete(newStockSymbol, portfolioSymbolSuggestions, (symbol) => {
-            newStockSymbol.value = symbol;
-            newStockPrice.focus();
-          });
-        }
-      }
-
-      // --- Portfolio Management ---
-      const portfolioOverlay = document.getElementById("portfolio-overlay");
-      const portfolioList = document.getElementById("portfolio-list");
-      const newStockSymbol = document.getElementById("new-stock-symbol");
-      const newStockPrice = document.getElementById("new-stock-price");
-      const addStockBtn = document.getElementById("add-stock-btn");
-      const addStockIcon = document.getElementById("add-stock-icon");
-      const addStockText = document.getElementById("add-stock-text");
-      const cancelEditBtn = document.getElementById("cancel-edit-btn");
-
-      let editingStockId = null;
-
-      function openPortfolio() {
-        if (!currentUser) return;
-        userMenu.classList.remove("show");
-        portfolioOverlay.classList.add("show");
-        fetchPortfolioStocks();
-        lucide.createIcons({ root: portfolioOverlay });
-      }
-
-      function closePortfolio() {
-        portfolioOverlay.classList.remove("show");
-      }
-
-      async function fetchPortfolioStocks() {
-        if (!currentUser) return;
-        try {
-          const response = await fetch(`/users/${currentUser.id}/stocks`);
-          const stocks = await response.json();
-          renderPortfolioTable(stocks);
-        } catch (error) {
-          console.error("Error fetching portfolio:", error);
-        }
-      }
-
-      function renderPortfolioTable(stocks) {
-        portfolioList.innerHTML = "";
-        if (stocks.length === 0) {
-          portfolioList.innerHTML =
-            '<tr><td colspan="3" class="text-center text-slate-400 py-10 text-sm">Chưa có cổ phiếu nào trong danh mục</td></tr>';
-          return;
-        }
-
-        stocks.forEach((stock) => {
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-                          <td class="font-bold text-primary-600">${stock.stock_name}</td>
-                          <td class="text-sm font-medium">${stock.avg_price.toLocaleString()} VND</td>
-                          <td>
-                              <div class="flex items-center gap-1">
-                                  <button onclick="editPortfolioStock(${stock.id}, '${stock.stock_name}', ${
-                                    stock.avg_price
-                                  })" class="p-2 text-slate-600 dark:text-slate-300 hover:text-primary-600 dark:hover:text-primary-400 transition-colors" title="Sửa">
-                                      <i data-lucide="edit-3" class="w-4 h-4"></i>
-                                  </button>
-                                  <button onclick="removePortfolioStock(${
-                                    stock.id
-                                  })" class="p-2 text-slate-600 dark:text-slate-300 hover:text-red-500 transition-colors" title="Xóa">
-                                      <i data-lucide="trash-2" class="w-4 h-4"></i>
-                                  </button>
-                              </div>
-                          </td>
-                      `;
-          portfolioList.appendChild(tr);
-        });
-        lucide.createIcons({ root: portfolioList });
-      }
-
-      function editPortfolioStock(id, symbol, price) {
-        editingStockId = id;
-        newStockSymbol.value = symbol;
-        newStockPrice.value = price;
-
-        // UI feedback
-        addStockText.innerText = "Cập nhật";
-        addStockIcon.setAttribute("data-lucide", "check");
-        cancelEditBtn.classList.remove("hidden");
-        lucide.createIcons({ root: addStockBtn });
-        newStockSymbol.focus();
-      }
-
-      function cancelEditStock() {
-        editingStockId = null;
-        newStockSymbol.value = "";
-        newStockPrice.value = "";
-        addStockText.innerText = "Thêm vào danh mục";
-        addStockIcon.setAttribute("data-lucide", "plus");
-        cancelEditBtn.classList.add("hidden");
-        lucide.createIcons({ root: addStockBtn });
-      }
-
-      async function addPortfolioStock() {
-        const sym = newStockSymbol.value.trim().toUpperCase();
-        const prc = parseFloat(newStockPrice.value);
-
-        if (!sym || isNaN(prc)) {
-          alert("Vui lòng nhập đầy đủ thông tin");
-          return;
-        }
-
-        try {
-          const url = editingStockId ? `/stocks/${editingStockId}` : `/users/${currentUser.id}/stocks`;
-          const method = editingStockId ? "PUT" : "POST";
-
-          const response = await fetch(url, {
-            method: method,
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ stock_name: sym, avg_price: prc }),
-          });
-
-          if (response.ok) {
-            cancelEditStock();
-            fetchPortfolioStocks();
-          } else {
-            alert(editingStockId ? "Lỗi khi cập nhật cổ phiếu" : "Lỗi khi thêm cổ phiếu");
-          }
-        } catch (error) {
-          console.error("Error adding/updating stock:", error);
-        }
-      }
-
-      async function removePortfolioStock(stockId) {
-        if (!confirm("Bạn có chắc muốn xóa mã này khỏi danh mục?")) return;
-
-        try {
-          const response = await fetch(`/stocks/${stockId}`, {
-            method: "DELETE",
-          });
-
-          if (response.ok) {
-            fetchPortfolioStocks();
-          } else {
-            alert("Lỗi khi xóa cổ phiếu");
-          }
-        } catch (error) {
-          console.error("Error removing stock:", error);
-        }
-      }
-
       function renderUserList() {
         userListContainer.innerHTML = "";
         users.forEach((user) => {
@@ -4643,9 +4401,6 @@
 
       // Fetch users on load
       fetchUsers();
-
-      // Setup portfolio symbol autocomplete
-      setupPortfolioSymbolAutocomplete();
 
       function removeSkeleton(elementId) {
         const el = document.getElementById(elementId);
