refactor: separate stock header into other html file

--- a/app/index.html
+++ b/app/index.html
@@ -371,81 +371,7 @@
           </div>
         </div>
 
-        <!-- Stock Header (shown when a stock is selected) -->
-        <div id="stock-header" class="hidden z-30 px-4 lg:px-8 pt-2 lg:pt-2">
-          <div
-            class="flex w-full flex-col lg:flex-row items-stretch lg:items-center gap-3 p-3 bg-white/50 dark:bg-slate-900/50 backdrop-blur-xl rounded-2xl border border-slate-200 dark:border-white/10"
-          >
-            <!-- Row 1: Symbol & Name -->
-            <div class="flex items-center gap-3 w-full lg:w-auto lg:flex-1 min-w-0">
-              <!-- Glassmorphic Stock Symbol Badge -->
-              <div
-                class="min-w-10 h-10 px-2 bg-gradient-to-br from-primary-500/80 to-blue-500/80 backdrop-blur-md rounded-xl flex items-center justify-center text-white font-black text-xs shadow-lg border border-slate-200 shrink-0"
-              >
-                <span id="stock-header-symbol" class="truncate max-w-[80px]">---</span>
-              </div>
-              <div class="flex-1 min-w-0">
-                <h3 id="stock-header-name" class="font-bold text-slate-800 dark:text-slate-100 text-sm truncate">
-                  Chọn mã cổ phiếu
-                </h3>
-                <p class="text-[10px] text-slate-500 dark:text-slate-400 uppercase tracking-widest font-bold">
-                  Đang xem chi tiết
-                </p>
-              </div>
-            </div>
-
-            <!-- Row 2: External Chart Links (Mobile: New line, Desktop: Right aligned) -->
-            <div
-              id="stock-header-links"
-              class="flex gap-2 w-full lg:w-auto pt-1 lg:pt-0 border-t border-white/10 lg:border-0 lg:ml-auto"
-            >
-              <a
-                id="link-tradingview"
-                href="#"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="flex-1 lg:flex-none justify-center flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#2962FF]/60 to-[#1E88E5]/60 dark:from-[#2962FF]/90 dark:to-[#1E88E5]/90 hover:from-[#2962FF] hover:to-[#1E88E5] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-blue-500/20 dark:shadow-blue-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
-              >
-                <!-- TradingView Logo -->
-                <svg class="w-4 h-4" viewBox="0 0 36 28" fill="currentColor">
-                  <path d="M14 22H7V6h7v16zm8-16h-7v16h7V6zm8 16h-7V6h7v16z" />
-                </svg>
-                TradingView
-              </a>
-              <a
-                id="link-investing"
-                href="#"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="flex-1 lg:flex-none justify-center flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#EF6C35]/60 to-[#FF8A50]/60 dark:from-[#EF6C35]/90 dark:to-[#FF8A50]/90 hover:from-[#EF6C35] hover:to-[#FF8A50] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-orange-500/20 dark:shadow-orange-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
-              >
-                <!-- Investing.com Logo -->
-                <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor">
-                  <path d="M3 3v18h18V3H3zm16 16H5V5h14v14zM7 7v10h2V7H7zm4 4v6h2v-6h-2zm4-2v8h2V9h-2z" />
-                </svg>
-                Investing
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Data Placeholder / Welcome (Hidden by default since Chart is active) -->
-        <div
-          id="tab-empty-state"
-          class="hidden w-full h-full flex flex-col items-center justify-center text-center max-w-sm mx-auto"
-        >
-          <div
-            class="w-20 h-20 bg-white/50 dark:bg-slate-900/50 rounded-3xl shadow-xl flex items-center justify-center mb-6 border border-slate-200 dark:border-white/10 transform rotate-6 p-4"
-          >
-            <img src="/static/logo.svg" alt="Logo" class="w-full h-full object-contain transform -rotate-6" />
-          </div>
-          <h3 class="text-xl font-black text-slate-800 dark:text-slate-100 mb-2 tracking-tight">Trung tâm Phân tích</h3>
-          <p
-            class="text-xs text-slate-500 dark:text-slate-400 font-bold uppercase tracking-widest leading-relaxed opacity-70"
-          >
-            Chọn một tab phía trên để xem chi tiết thông tin thị trường
-          </p>
-        </div>
+        <!-- COMPONENT: stock-header -->
 
         <!-- Technical Chart Tab (Visible by default) -->
         <div
