--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/portfolio.css" />
     <link rel="stylesheet" href="/static/css/chat.css" />
     <link rel="stylesheet" href="/static/css/user.css" />
+    <link rel="stylesheet" href="/static/css/analysis.css" />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -100,51 +101,86 @@
         overflow: hidden;
       }
 
-      /* Dual Panel Mode Styles */
-      #right-column.dual-panel-active #tab-content-container {
-        display: flex !important;
-        flex-direction: row !important;
-        gap: 1.5rem;
-        overflow: hidden !important;
+      /* Dual Panel Mode Styles - Mobile fix (only when 2 panels visible) */
+      @media (max-width: 1023px) {
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-chart {
+          max-height: 50vh;
+        }
+
+        #right-column.dual-panel-active .tab-content-item:not(.hidden) > .overflow-y-auto {
+          overflow-y: hidden;
+        }
+
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-news:not(.hidden),
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-analysis:not(.hidden) {
+          padding-top: 0 !important;
+        }
       }
 
-      /* In dual panel, any tab content that isn't hidden takes flex: 1 */
-      #right-column.dual-panel-active .tab-content-item {
-        flex: 1 !important;
-        min-width: 0;
-        display: none; /* Default for hidden */
-      }
+      /* Dual Panel Mode Styles - Only on large screens */
+      @media (min-width: 1024px) {
+        /* Container for tab content items - grid layout */
+        #right-column.dual-panel-active {
+          display: grid;
+          grid-template-rows: auto auto 1fr;
+          grid-template-columns: 1fr;
+          overflow: hidden;
+        }
 
-      /* Override hidden behavior for active components in dual mode */
-      #right-column.dual-panel-active .tab-content-item:not(.hidden) {
-        display: flex !important;
-        flex-direction: column;
-      }
+        /* When two panels are visible, use 2 columns */
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden)) {
+          grid-template-columns: 1fr 1fr;
+        }
 
-      /* Ensure chart is always visible ONLY IF it's not the primary tab to avoid double column same content icon */
-      /* Actually, the switchTab logic already ensures this. */
+        /* Tab header spans full width */
+        #right-column.dual-panel-active #tab-header {
+          grid-column: 1 / -1;
+          width: 100%;
+          flex-shrink: 0;
+        }
 
-      #dual-panel-container {
-        display: none;
-      }
+        /* Stock header also spans full width */
+        #right-column.dual-panel-active #stock-header {
+          grid-column: 1 / -1;
+          width: 100%;
+          flex-shrink: 0;
+        }
 
-      /* Mini Charts & S/R Lines */
-      .mini-sparkline {
-        width: 100%;
-        height: 48px;
-        margin-top: 8px;
-        opacity: 0.8;
-        position: relative;
-        overflow: hidden;
-      }
+        /* Tab content items share remaining space equally */
+        #right-column.dual-panel-active .tab-content-item {
+          min-width: 0;
+          min-height: 0;
+          max-width: 100%;
+          max-height: 100%;
+          display: none;
+          overflow: hidden;
+        }
 
-      /* Analysis Chart Area */
-      #analysis-chart-wrapper {
-        transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
-      }
+        /* Show active tab content items */
+        #right-column.dual-panel-active .tab-content-item:not(.hidden) {
+          display: flex !important;
+          flex-direction: column;
+          height: 100%;
+          max-height: 100%;
+          overflow: hidden;
+          transition: all 0.3s ease-in-out;
+        }
 
-      #analysis-chart-wrapper.collapsed {
-        display: none !important;
+        /* Reduce gap between panels - only when 2 panels are visible */
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-chart:not(.hidden) {
+          padding-right: 1rem !important;
+        }
+
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-news:not(.hidden),
+        #right-column.dual-panel-active:has(.tab-content-item:not(.hidden) ~ .tab-content-item:not(.hidden))
+          #tab-content-analysis:not(.hidden) {
+          padding-left: 1rem !important;
+        }
       }
 
       #tab-indicator::after {
@@ -170,48 +206,6 @@
         background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.3), transparent);
       }
 
-      /* Indicator Tooltip Styles */
-      .indicator-tooltip {
-        position: relative;
-        display: inline-flex;
-        align-items: center;
-        cursor: help;
-      }
-
-      .indicator-tooltip .tooltip-icon {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        width: 16px;
-        height: 16px;
-        margin-left: 4px;
-        color: #64748b;
-        transition: all 0.2s ease;
-        flex-shrink: 0;
-      }
-
-      .indicator-tooltip .tooltip-icon svg {
-        width: 14px;
-        height: 14px;
-      }
-
-      .dark .indicator-tooltip .tooltip-icon {
-        color: #94a3b8;
-      }
-
-      .indicator-tooltip:hover .tooltip-icon {
-        color: #6366f1;
-      }
-
-      .dark .indicator-tooltip:hover .tooltip-icon {
-        color: #818cf8;
-      }
-
-      /* Hide the inline tooltip-content, we use global tooltip instead */
-      .indicator-tooltip .tooltip-content {
-        display: none !important;
-      }
-
       /* Resizer Styles */
       #resizer {
         width: 4px;
@@ -226,10 +220,6 @@
       #analysis-chart-resizer:hover,
       #analysis-chart-resizer.resizing {
         background-color: rgba(99, 102, 241, 0.2);
-      }
-
-      #analysis-chart-resizer.resizing div {
-        background-color: #6366f1;
       }
     </style>
   </head>
@@ -330,7 +320,7 @@
         <div class="absolute bottom-0 left-0 w-64 h-64 bg-accent-cyan/10 rounded-full blur-3xl"></div>
 
         <!-- Tab Header -->
-        <div class="z-30 px-4 pt-4 lg:px-8 lg:pt-5">
+        <div id="tab-header" class="z-30 px-4 pt-4 lg:px-8 lg:pt-5">
           <div
             class="flex w-full p-1 gap-1 bg-white/40 dark:bg-slate-900/40 backdrop-blur-3xl rounded-2xl border border-slate-200 dark:border-white/5 shadow-lg relative"
             id="tab-bar"
@@ -528,6 +518,13 @@
         // Re-sync tab indicator in real-time
         const activeBtn = document.querySelector(".sidebar-tab-btn.active");
         if (activeBtn) updateTabIndicator(activeBtn);
+
+        // Trigger resize for charts
+        setTimeout(() => {
+          window.dispatchEvent(new Event("resize"));
+          refreshCharts();
+          refreshAnalysisChart();
+        }, 50);
       });
 
       // Reset layout for mobile on window resize
