feat: add feature analyze by sector

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/static/css/chat.css" />
     <link rel="stylesheet" href="/static/css/user.css" />
     <link rel="stylesheet" href="/static/css/analysis.css" />
+    <link rel="stylesheet" href="/static/css/sector-selector.css" />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -285,6 +286,8 @@
 
     <!-- COMPONENT: portfolio -->
 
+    <!-- COMPONENT: sector-selector -->
+
     <!-- Main Content -->
     <main class="flex-1 flex flex-col lg:flex-row overflow-y-auto lg:overflow-hidden relative z-10" id="main-container">
       <!-- Left Column (initially 50%) -->
@@ -376,6 +379,7 @@
     <script src="/static/js/user.js"></script>
     <script src="/static/js/settings.js"></script>
     <script src="/static/js/portfolio.js"></script>
+    <script src="/static/js/sector-selector.js"></script>
     <script src="/static/js/chat.js"></script>
     <script src="/static/js/stock-header.js"></script>
     <script src="/static/js/chart-utils.js"></script>
