--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,7 @@
 
         /* Tab content items share remaining space equally */
         #right-column.dual-panel-active .tab-content-item {
+          grid-row: 3;
           min-width: 0;
           min-height: 0;
           max-width: 100%;
