--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Lightweight Charts (TradingView) for Stock Charts - v4 for stable API -->
     <script src="https://unpkg.com/lightweight-charts@5.1.0/dist/lightweight-charts.standalone.production.js"></script>
+    <!-- SheetJS for XLSX parsing -->
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
     <script>
       tailwind.config = {
         darkMode: "class",
@@ -585,5 +587,20 @@
         }
       }
     </script>
+
+    <!-- Custom Dialog (shared across all components) -->
+    <div id="custom-dialog-overlay" class="modal-overlay">
+      <div class="settings-modal custom-dialog" style="max-width: 400px; width: 90vw">
+        <div class="text-center mb-6">
+          <div
+            id="custom-dialog-icon"
+            class="w-16 h-16 mx-auto mb-4 rounded-full flex items-center justify-center"
+          ></div>
+          <h3 id="custom-dialog-title" class="text-lg font-bold text-slate-900 dark:text-white"></h3>
+          <p id="custom-dialog-message" class="text-sm text-slate-600 dark:text-slate-300 mt-2"></p>
+        </div>
+        <div id="custom-dialog-buttons" class="flex flex-col gap-3"></div>
+      </div>
+    </div>
   </body>
 </html>
