refactor: separate indicator logic and enhance its loading

--- a/app/index.html
+++ b/app/index.html
@@ -384,6 +384,7 @@
     <script src="/static/js/sector-selector.js"></script>
     <script src="/static/js/chat.js"></script>
     <script src="/static/js/stock-header.js"></script>
+    <script src="/static/js/chart-indicator.js"></script>
     <script src="/static/js/chart-utils.js"></script>
     <script src="/static/js/chart.js"></script>
     <script src="/static/js/news.js"></script>
