feat: add voice-to-text function

--- a/app/index.html
+++ b/app/index.html
@@ -383,6 +383,7 @@
     <script src="/static/js/portfolio.js"></script>
     <script src="/static/js/sector-selector.js"></script>
     <script src="/static/js/chat.js"></script>
+    <script src="/static/js/voice-input.js"></script>
     <script src="/static/js/stock-header.js"></script>
     <script src="/static/js/chart-indicator.js"></script>
     <script src="/static/js/chart-utils.js"></script>
